Fixing z-index of loader animation

--- a/web/app/themes/vestedworld/assets/styles/components/_ui-components.scss
+++ b/web/app/themes/vestedworld/assets/styles/components/_ui-components.scss
@@ -90,9 +90,9 @@
 .loading {
   top: 50%;
   left: 50%;
-  z-index: 1;
   width: 50px;
   height: 50px;
+  z-index: 10000;
   position: fixed;
   border-radius: 50%;
   animation: spin .5s linear infinite;
